--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: 🚀 Deploy to Hostinger via SFTP (Incremental)
 on:
   push:
     branches:
-      - dev   # only deploy after merge to main
+      - dev   # or main — choose which branch you want to deploy
 
 jobs:
   deploy:
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 🔥 Cache previous deployment state
+      # 🔥 Restore previous deployment state to detect changed files
       - name: Restore FTP state cache
         uses: actions/cache@v4
         with:
@@ -22,23 +22,26 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-ftp-
 
-      - name: Deploy changed files only
+      - name: 🚀 Deploy changed files only
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
-          server: ${{ secrets.FTP_SERVER }}   # just IP: 93.127.208.22
+          server: ${{ secrets.FTP_SERVER }}   # e.g., 93.127.208.22
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           server-dir: /public_html/echoWasteConnect/
-          protocol: ftp
-          port: 21
-          passive: true
+          protocol: sftp                      # ✅ use SFTP for stable connection
+          port: 22
           exclude: |
             **/.git*
             **/.github*
             **/node_modules/*
             **/README.md
+          # Optional advanced settings:
+          state-name: .ftp-deploy-sync-state.json   # keeps track of changes
+          dangerous-clean-slate: false              # don’t delete missing files
+          log-level: standard
 
-      # ✅ Save sync state for next run
+      # 💾 Save sync state for next run
       - name: Save FTP state cache
         uses: actions/cache@v4
         with:
