--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,8 @@ jobs:
           port: 21
           server-dir: /public_html/echoWasteConnect/
           exclude: ''
-          local-dir: .
+          local-dir: ./
+          exclude: ''
           dangerous-clean-slate: false
 
       - name: SSH and unzip (requires SSH access)
