--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 application/config/database.php
-application/config/config.php
+# application/config/config.php
 application/views/templates_c/*
 application/public/uploads/*
+.git/*
